creamos un modelo para realizar un clasificador multiclases

--- a/keras fundamentals/introduction_deep_learning.ipynb
+++ b/keras fundamentals/introduction_deep_learning.ipynb
@@ -439,7 +439,16 @@
    "id": "6ffda976-4c9d-45ab-9273-03946d8c4b32",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Train your model for 20 epochs\n",
+    "model.fit(X_train, y_train, epochs = 20)\n",
+    "\n",
+    "# Evaluate your model accuracy on the test set\n",
+    "accuracy = model.evaluate(X_test, y_test)[1]\n",
+    "\n",
+    "# Print accuracy\n",
+    "print('Accuracy:', accuracy)"
+   ]
   }
  ],
  "metadata": {
