se completo el codigo para un modelo de clasificacionmulticlass

--- a/keras fundamentals/classification.ipynb
+++ b/keras fundamentals/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "9128239c-8604-4df5-a0ed-fe7eed1a444a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "from tensorflow.keras.layers import Dense\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow.keras.utils import to_categorical# para transformar a variables categoricas"
    ]
   },
   {
@@ -157,12 +158,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e4ff061-f7ed-4523-a12a-d41ee7ca8336",
+   "metadata": {},
+   "source": [
+    "darts.competitor are not yet in a format to be understood by your network. They contain the names of the competitors as strings. You will first turn these competitors into unique numbers,then use the to_categorical() function from keras.utils to turn these numbers into their one-hot encoded representation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ef10e9b1-7ded-46f3-83da-d67a8871437f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label encoded competitors: \n",
+      " 0    2\n",
+      "1    3\n",
+      "2    1\n",
+      "3    0\n",
+      "4    2\n",
+      "Name: competitor, dtype: int8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Transform into a categorical variable\n",
+    "df_darts.competitor = pd.Categorical(df_darts.competitor)\n",
+    "\n",
+    "# Assign a number to each category (label encoding)\n",
+    "df_darts.competitor = df_darts.competitor.cat.codes \n",
+    "\n",
+    "# Print the label encoded competitors\n",
+    "print('Label encoded competitors: \\n',df_darts.competitor.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cfef73a9-fbc5-4b22-9c8f-d17f249f6f46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One-hot encoded competitors: \n",
+      " [[0. 0. 1. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 1. 0. 0.]\n",
+      " ...\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "coordinates = df_darts.drop(['competitor'], axis=1)\n",
+    "# Use to_categorical on your labels\n",
+    "competitors = to_categorical(df_darts.competitor)\n",
+    "\n",
+    "# Now print the one-hot encoded labels\n",
+    "print('One-hot encoded competitors: \\n',competitors)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef10e9b1-7ded-46f3-83da-d67a8871437f",
+   "id": "9fb84f30-343e-4439-b350-631585a5e6c2",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "005407b6-21c2-497f-8724-2a26e3e71e11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit your model to the training data for 200 epochs\n",
+    "model.fit(coord_train,competitors_train,epochs=200)\n",
+    "\n",
+    "# Evaluate your model accuracy on the test data\n",
+    "accuracy = model.evaluate(coord_test, competitors_test)[1]\n",
+    "\n",
+    "# Print accuracy\n",
+    "print('Accuracy:', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce48e08e-b83b-4d14-8d55-fce3a55726af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict on coords_small_test\n",
+    "preds = model.predict(coords_small_test)\n",
+    "\n",
+    "# Print preds vs true values\n",
+    "print(\"{:45} | {}\".format('Raw Model Predictions','True labels'))\n",
+    "for i,pred in enumerate(preds):\n",
+    "  print(\"{} | {}\".format(pred,competitors_small_test[i]))\n",
+    "\n",
+    "# Extract the position of highest probability from each pred vector\n",
+    "preds_chosen = [np.argmax(pred) for pred in preds]\n",
+    "\n",
+    "# Print preds vs true values\n",
+    "print(\"{:10} | {}\".format('Rounded Model Predictions','True labels'))\n",
+    "for i,pred in enumerate(preds_chosen):\n",
+    "  print(\"{:25} | {}\".format(pred,competitors_small_test[i]))"
+   ]
   }
  ],
  "metadata": {
