ejercicio de multilabel utilizando kera

--- a/keras fundamentals/classification.ipynb
+++ b/keras fundamentals/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "9128239c-8604-4df5-a0ed-fe7eed1a444a",
    "metadata": {},
    "outputs": [],
@@ -273,6 +273,284 @@
     "print(\"{:10} | {}\".format('Rounded Model Predictions','True labels'))\n",
     "for i,pred in enumerate(preds_chosen):\n",
     "  print(\"{:25} | {}\".format(pred,competitors_small_test[i]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7e7a176-7a8b-46cf-b8fd-7fe11792f4a5",
+   "metadata": {},
+   "source": [
+    "# multilabel clasification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07fe3af2-0713-41af-b4d7-0cce406ad680",
+   "metadata": {},
+   "source": [
+    "An irrigation machine\r\n",
+    "You're going to automate the watering of farm parcels by making an intelligent irrigation machine. Multi-label classification problems differ from multi-class problems in that each observation can be labeled with zero or more classes. So classes/labels are not mutually exclusive, you could water all, none or any combination of farm parcels based on the inputs.\r\n",
+    "\r\n",
+    "To account for this behavior what we do is have an output layer with as many neurons as classes but this time, unlike in multi-class problems, each output neuron has a sigmoid activation function. This makes each neuron in the output layer able to output a number between 0 and 1 independently."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "00e1b79d-14e9-4c5f-9897-58c0ef4b810a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>sensor_0</th>\n",
+       "      <th>sensor_1</th>\n",
+       "      <th>sensor_2</th>\n",
+       "      <th>sensor_3</th>\n",
+       "      <th>sensor_4</th>\n",
+       "      <th>sensor_5</th>\n",
+       "      <th>sensor_6</th>\n",
+       "      <th>sensor_7</th>\n",
+       "      <th>sensor_8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>sensor_13</th>\n",
+       "      <th>sensor_14</th>\n",
+       "      <th>sensor_15</th>\n",
+       "      <th>sensor_16</th>\n",
+       "      <th>sensor_17</th>\n",
+       "      <th>sensor_18</th>\n",
+       "      <th>sensor_19</th>\n",
+       "      <th>parcel_0</th>\n",
+       "      <th>parcel_1</th>\n",
+       "      <th>parcel_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  sensor_0  sensor_1  sensor_2  sensor_3  sensor_4  sensor_5  \\\n",
+       "0           0       1.0       2.0       1.0       7.0       0.0       1.0   \n",
+       "1           1       5.0       1.0       3.0       5.0       2.0       2.0   \n",
+       "2           2       3.0       1.0       4.0       3.0       4.0       0.0   \n",
+       "3           3       2.0       2.0       4.0       3.0       5.0       0.0   \n",
+       "4           4       4.0       3.0       3.0       2.0       5.0       1.0   \n",
+       "\n",
+       "   sensor_6  sensor_7  sensor_8  ...  sensor_13  sensor_14  sensor_15  \\\n",
+       "0       1.0       4.0       0.0  ...        8.0        1.0        0.0   \n",
+       "1       1.0       2.0       3.0  ...        4.0        5.0        5.0   \n",
+       "2       1.0       6.0       0.0  ...        3.0        3.0        1.0   \n",
+       "3       3.0       2.0       2.0  ...        4.0        1.0        1.0   \n",
+       "4       3.0       1.0       1.0  ...        1.0        3.0        2.0   \n",
+       "\n",
+       "   sensor_16  sensor_17  sensor_18  sensor_19  parcel_0  parcel_1  parcel_2  \n",
+       "0        2.0        1.0        9.0        2.0         0         1         0  \n",
+       "1        2.0        2.0        2.0        7.0         0         0         0  \n",
+       "2        0.0        3.0        1.0        0.0         1         1         0  \n",
+       "3        4.0        1.0        3.0        2.0         0         0         0  \n",
+       "4        2.0        1.0        1.0        0.0         1         1         0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "irrigation=pd.read_csv(\"./datasets/irrigation_machine.csv\")\n",
+    "irrigation.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b8df13-c2ef-474c-a49a-1c4858762fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate a Sequential model\n",
+    "model = Sequential()\n",
+    "\n",
+    "# Add a hidden layer of 64 neurons and a 20 neuron's input\n",
+    "model.add(Dense(64,input_shape=(20,),activation=\"relu\"))\n",
+    "\n",
+    "# Add an output layer of 3 neurons with sigmoid activation\n",
+    "model.add(Dense(3,activation=\"sigmoid\"))\n",
+    "\n",
+    "# Compile your model with binary crossentropy loss\n",
+    "model.compile(optimizer='adam',\n",
+    "           loss = \"binary_crossentropy\",\n",
+    "           metrics=['accuracy'])\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e901d25-2c96-47ac-aa38-dcda2e6f69c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train for 100 epochs using a validation split of 0.2\n",
+    "model.fit(sensors_train, parcels_train, epochs = 100, validation_split = 0.2)\n",
+    "\n",
+    "# Predict on sensors_test and round up the predictions\n",
+    "preds = model.predict(sensors_test)\n",
+    "preds_rounded = np.round(preds)\n",
+    "\n",
+    "# Print rounded preds\n",
+    "print('Rounded Predictions: \\n', preds_rounded)\n",
+    "\n",
+    "# Evaluate your model's accuracy on the test data\n",
+    "accuracy = model.evaluate(sensors_test, parcels_test)[1]\n",
+    "\n",
+    "# Print accuracy\n",
+    "print('Accuracy:', accuracy)"
    ]
   }
  ],
