he agregado ejemplos de callbacks functions de early stopping , model checkout y history

--- a/keras fundamentals/classification.ipynb
+++ b/keras fundamentals/classification.ipynb
@@ -552,6 +552,154 @@
     "# Print accuracy\n",
     "print('Accuracy:', accuracy)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd2d264a-ab03-415b-80fe-10f743cb860c",
+   "metadata": {},
+   "source": [
+    "# keras call back "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44bd69dd-4c71-4b77-a213-04df14c65326",
+   "metadata": {},
+   "source": [
+    "## The history callback\r\n",
+    "The history callback is returned by default every time you train a model with the .fit() method. To access these metrics you can access the history dictionary parameter inside the returned h_callback object with the corresponding keys."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "497201a5-410c-42c2-bf66-4d2b8a32c1ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "def plot_loss(loss,val_loss):\n",
+    "  plt.figure()\n",
+    "  plt.plot(loss)\n",
+    "  plt.plot(val_loss)\n",
+    "  plt.title('Model loss')\n",
+    "  plt.ylabel('Loss')\n",
+    "  plt.xlabel('Epoch')\n",
+    "  plt.legend(['Train', 'Test'], loc='upper right')\n",
+    "  plt.show()\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "50d2d797-2910-45e8-9088-1589ffe0cd68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\ndef plot_accuracy(acc,val_acc):\\n  # Plot training & validation accuracy values\\n  plt.figure()\\n  plt.plot(acc)\\n  plt.plot(val_acc)\\n  plt.title('Model accuracy')\\n  plt.ylabel('Accuracy')\\n  plt.xlabel('Epoch')\\n  plt.legend(['Train', 'Test'], loc='upper left')\\n  plt.show()\\n\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "def plot_accuracy(acc,val_acc):\n",
+    "  # Plot training & validation accuracy values\n",
+    "  plt.figure()\n",
+    "  plt.plot(acc)\n",
+    "  plt.plot(val_acc)\n",
+    "  plt.title('Model accuracy')\n",
+    "  plt.ylabel('Accuracy')\n",
+    "  plt.xlabel('Epoch')\n",
+    "  plt.legend(['Train', 'Test'], loc='upper left')\n",
+    "  plt.show()\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de1ee3ba-32ef-46cd-8490-6feadc8f3de2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train your model and save its history\n",
+    "h_callback = model.fit(X_train, y_train, epochs = 25,\n",
+    "               validation_data=(X_test, y_test))\n",
+    "\n",
+    "# Plot train vs test loss during training\n",
+    "plot_loss(h_callback.history[\"loss\"], h_callback.history[\"val_loss\"])\n",
+    "\n",
+    "# Plot train vs test accuracy during training\n",
+    "plot_accuracy(h_callback.history[\"accuracy\"], h_callback.history[\"val_accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97727d61-ba71-4c35-ad2e-3f5080b8f435",
+   "metadata": {},
+   "source": [
+    "## Early stopping your model\n",
+    "The early stopping callback is useful since it allows for you to stop the model training if it no longer improves after a given number of epochs. To make use of this functionality you need to pass the callback inside a list to the model's callback parameter in the .fit() method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbe77fb1-7400-4e34-a8d5-7cd9629a2114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the early stopping callback\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "\n",
+    "# Define a callback to monitor val_accuracy\n",
+    "monitor_val_acc = EarlyStopping(monitor=\"val_accuracy\", \n",
+    "                       patience=5)\n",
+    "\n",
+    "# Train your model using the early stopping callback\n",
+    "model.fit(X_train, y_train, \n",
+    "           epochs=1000, validation_data=(X_test,y_test),\n",
+    "           callbacks= [monitor_val_acc])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c994a2d-314f-48cb-a076-45664ec5c3dc",
+   "metadata": {},
+   "source": [
+    "## A combination of callbacks\r\n",
+    "Deep learning models can take a long time to train, especially when you move to deeper architectures and bigger datasets. Saving your model every time it improves as well as stopping it when it no longer does allows you to worry less about choosing the number of epochs to train for. You can also restore a saved model anytime and resume training where you left it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b3ebff3-f55d-4892-9182-16a487cb898c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the EarlyStopping and ModelCheckpoint callbacks\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "\n",
+    "# Early stop on validation accuracy\n",
+    "monitor_val_acc = EarlyStopping(monitor = \"val_accuracy\", patience = 3)\n",
+    "\n",
+    "# Save the best model as best_banknote_model.hdf5\n",
+    "model_checkpoint = ModelCheckpoint(\"best_banknote_model.hdf5\", save_best_only = True)\n",
+    "\n",
+    "# Fit your model for a stupid amount of epochs\n",
+    "h_callback = model.fit(X_train, y_train,\n",
+    "                    epochs = 1000000000000,\n",
+    "                    callbacks = [monitor_val_acc, model_checkpoint],\n",
+    "                    validation_data = (X_test, y_test))"
+   ]
   }
  ],
  "metadata": {
